--- a/index.html
+++ b/index.html
@@ -45,7 +45,18 @@
                         <span class="text-sm font-light text-gray-500 dark:text-gray-400">Game created with my son Mateusz.</span>
                     </a>
                 </li>
-               
+                <li>
+                    <a href="/bingo?room=wyspa+dywanowa" class="block p-3 rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
+                        <div class="font-semibold">Bingo - wyspa dywanowa</div>
+                        <span class="text-sm font-light text-gray-500 dark:text-gray-400">Game created with my son Mateusz.</span>
+                    </a>
+                </li>
+                 <li>
+                    <a href="/bingo?room=poziom7" class="block p-3 rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
+                        <div class="font-semibold">Bingo - poziom 7</div>
+                        <span class="text-sm font-light text-gray-500 dark:text-gray-400">Game created with my son Mateusz.</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
