--- a/index.html
+++ b/index.html
@@ -57,6 +57,18 @@
                         <span class="text-sm font-light text-gray-500 dark:text-gray-400">Game created with my son Mateusz.</span>
                     </a>
                 </li>
+                <li>
+                    <a href="https://ctjs.rocks" class="block p-3 rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
+                        <div class="font-semibold">CT.js</div>
+                        <span class="text-sm font-light text-gray-500 dark:text-gray-400">2D game editor</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.pixilart.com/draw" class="block p-3 rounded-lg hover:bg-gray-50 dark:hover:bg-gray-700">
+                        <div class="font-semibold">PIXELART</div>
+                        <span class="text-sm font-light text-gray-500 dark:text-gray-400">tool for creating pixel sprites</span>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
